Fix background image repeat on mobile

--- a/css/cover.css
+++ b/css/cover.css
@@ -28,7 +28,7 @@ html,
 body {
   height: 100%;
   background-image:url("../assets/img/palm_trees_dark.jpg");
-  background-size: 100%;
+  background-size: cover;
 }
 body {
   color: #fff;
